# ATLAS

./: .cogitor.heartbeat  .cogitor.session_bead_id  .gitignore  .parent  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  atlas.conf.example  docker-compose.jetson.yml  docker-compose.yml  pyproject.toml
.beads/: metadata.json
atlas/: __init__.py
atlas-proxy/: Dockerfile  README.md  agent.go  aider_format.go  build_verify.go  go.mod  grammar.go  main.go  parallel.go  permissions.go  project.go  tools.go  types.go  v3_adapter.go  v3_bridge.go
benchmark/: best_of_k.py  cli.py  config.py  geo_learning.py  runner.py  v2_runner.py  v3_dashboard_bridge.py  v3_dashboard_push.py  v3_runner.py
docs/: API.md  ARCHITECTURE.md  CLI.md  CONFIGURATION.md  MAP.md  SETUP.md  TROUBLESHOOTING.md  V2_5_ABLATION_STUDY.md  V2_TO_V2_5_MIGRATION.md  V3_1_STATUS.md  V3_STATUS.md
geometric-lens/: .dockerignore  Dockerfile  config.py  main.py  pipeline.py  requirements.txt  sandbox_client.py  storage.py  verify_loop.py
inference/: Dockerfile  Dockerfile.mtp  Dockerfile.v31  entrypoint-embed.sh  entrypoint-mtp.sh  entrypoint-v3-specdec.sh  entrypoint-v3.1-9b.sh  entrypoint.sh
llm-proxy/: Dockerfile  main.py  queue_worker.py  task_queue.py
manifests/: llama-deployment.yaml
rag-api/: Dockerfile  Dockerfile.jetson  config.py  main.py  rag.py  requirements.jetson.txt  v3_component_routes.py  v3_routes.py
sandbox/: Dockerfile  executor_server.py
scripts/: build-containers.sh  collect_lens_training_data.py  deploy-9b.sh  derive_ablation.py  install.sh  prepare_lens_training.py  (+7 more)
(+2611 files in other folders)
